# customer-support-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: newsletter_subscription.csv
downloaded_artifacts/: label_encoder.joblib  tokenizer.joblib
downloaded_artifacts/model/: MLmodel  conda.yaml  requirements.txt
downloaded_artifacts/model/data/model/: fingerprint.pb  keras_metadata.pb
downloaded_artifacts/model/data/model/variables/: variables.data-00000-of-00001
model_artifacts/: tokenizer.joblib
models/: intent_classification_model.py  train_model.py
prediction_api/: Dockerfile  app.py  requirements.txt
prediction_api/model/: saved_model.pb
prediction_api/model/variables/: variables.index
processor/: rag_system.py  ticket_processor.py
setup/: mlflow_artifacts.py
tests/: test_intent_classification.py  test_rag_system.py
ticket_api/: Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
